{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 22,
  "lineage": "a54ce99d-e87a-8311-9f54-af79e1351af3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0febe3902d64e2b5d",
            "domain": "vpc",
            "id": "eipalloc-02578c2df2c91bbf9",
            "instance": "i-0bee359a41b71a036",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05dcc506fe965f696",
            "private_dns": "ip-10-0-3-230.ec2.internal",
            "private_ip": "10.0.3.230",
            "public_dns": "ec2-3-225-76-166.compute-1.amazonaws.com",
            "public_ip": "3.225.76.166",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "environment": "dev",
              "owners": "sap"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.myami",
            "module.ec2-bastion-instance.aws_instance.this",
            "module.ec2-bastion-instance.aws_spot_instance_request.this",
            "module.myvpc.aws_cloudwatch_log_group.flow_log",
            "module.myvpc.aws_customer_gateway.this",
            "module.myvpc.aws_db_subnet_group.database",
            "module.myvpc.aws_default_network_acl.this",
            "module.myvpc.aws_default_route_table.default",
            "module.myvpc.aws_default_security_group.this",
            "module.myvpc.aws_default_vpc.this",
            "module.myvpc.aws_egress_only_internet_gateway.this",
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_elasticache_subnet_group.elasticache",
            "module.myvpc.aws_flow_log.this",
            "module.myvpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_nat_gateway.this",
            "module.myvpc.aws_network_acl.database",
            "module.myvpc.aws_network_acl.elasticache",
            "module.myvpc.aws_network_acl.intra",
            "module.myvpc.aws_network_acl.outpost",
            "module.myvpc.aws_network_acl.private",
            "module.myvpc.aws_network_acl.public",
            "module.myvpc.aws_network_acl.redshift",
            "module.myvpc.aws_network_acl_rule.database_inbound",
            "module.myvpc.aws_network_acl_rule.database_outbound",
            "module.myvpc.aws_network_acl_rule.elasticache_inbound",
            "module.myvpc.aws_network_acl_rule.elasticache_outbound",
            "module.myvpc.aws_network_acl_rule.intra_inbound",
            "module.myvpc.aws_network_acl_rule.intra_outbound",
            "module.myvpc.aws_network_acl_rule.outpost_inbound",
            "module.myvpc.aws_network_acl_rule.outpost_outbound",
            "module.myvpc.aws_network_acl_rule.private_inbound",
            "module.myvpc.aws_network_acl_rule.private_outbound",
            "module.myvpc.aws_network_acl_rule.public_inbound",
            "module.myvpc.aws_network_acl_rule.public_outbound",
            "module.myvpc.aws_network_acl_rule.redshift_inbound",
            "module.myvpc.aws_network_acl_rule.redshift_outbound",
            "module.myvpc.aws_redshift_subnet_group.redshift",
            "module.myvpc.aws_route.database_internet_gateway",
            "module.myvpc.aws_route.database_ipv6_egress",
            "module.myvpc.aws_route.database_nat_gateway",
            "module.myvpc.aws_route.private_ipv6_egress",
            "module.myvpc.aws_route.private_nat_gateway",
            "module.myvpc.aws_route.public_internet_gateway",
            "module.myvpc.aws_route.public_internet_gateway_ipv6",
            "module.myvpc.aws_route_table.database",
            "module.myvpc.aws_route_table.elasticache",
            "module.myvpc.aws_route_table.intra",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_route_table.redshift",
            "module.myvpc.aws_route_table_association.database",
            "module.myvpc.aws_route_table_association.elasticache",
            "module.myvpc.aws_route_table_association.intra",
            "module.myvpc.aws_route_table_association.outpost",
            "module.myvpc.aws_route_table_association.private",
            "module.myvpc.aws_route_table_association.public",
            "module.myvpc.aws_route_table_association.redshift",
            "module.myvpc.aws_route_table_association.redshift_public",
            "module.myvpc.aws_subnet.database",
            "module.myvpc.aws_subnet.elasticache",
            "module.myvpc.aws_subnet.intra",
            "module.myvpc.aws_subnet.outpost",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_subnet.redshift",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_dhcp_options.this",
            "module.myvpc.aws_vpc_dhcp_options_association.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.myvpc.aws_vpn_gateway.this",
            "module.myvpc.aws_vpn_gateway_attachment.this",
            "module.myvpc.aws_vpn_gateway_route_propagation.intra",
            "module.myvpc.aws_vpn_gateway_route_propagation.private",
            "module.myvpc.aws_vpn_gateway_route_propagation.public",
            "module.myvpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.myvpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-bastion-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc34ab2709337aa",
            "arn": "arn:aws:ec2:us-east-1:097197321955:instance/i-0bee359a41b71a036",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bee359a41b71a036",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraformkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05dcc506fe965f696",
            "private_dns": "ip-10-0-3-230.ec2.internal",
            "private_ip": "10.0.3.230",
            "public_dns": "ec2-3-239-150-145.compute-1.amazonaws.com",
            "public_ip": "3.239.150.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0edb725065fd8474c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a68aad311373be06",
            "tags": {
              "Name": "dev-public-instance",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "dev-public-instance",
              "environment": "dev",
              "owners": "sap"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "dev-public-instance"
            },
            "vpc_security_group_ids": [
              "sg-03cf39118b213c974"
            ]
          },
          "dependencies": [
            "data.aws_ami.myami",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0d3567ac5e44e0a11",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-234-130-38.compute-1.amazonaws.com",
            "public_ip": "54.234.130.38",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-us-east-1a",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-us-east-1a",
              "Owner": "sam"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:internet-gateway/igw-01d353ee046b73c60",
            "id": "igw-01d353ee046b73c60",
            "owner_id": "097197321955",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc",
              "Owner": "sam"
            },
            "vpc_id": "vpc-0197cd7ae68519180"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3567ac5e44e0a11",
            "connectivity_type": "public",
            "id": "nat-07a26402c1605671b",
            "network_interface_id": "eni-0ab1fa34aeab77155",
            "private_ip": "10.0.3.211",
            "public_ip": "54.234.130.38",
            "subnet_id": "subnet-0a68aad311373be06",
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-us-east-1a",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-us-east-1a",
              "Owner": "sam"
            }
          },
          "dependencies": [
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09658a905650a72281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07a26402c1605671b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09658a905650a7228",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_eip.nat",
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_nat_gateway.this",
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d353ee046b73c60",
            "id": "r-rtb-0f2c25979dde296231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2c25979dde29623",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_internet_gateway.this",
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:route-table/rtb-09658a905650a7228",
            "id": "rtb-09658a905650a7228",
            "owner_id": "097197321955",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-private",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-private",
              "Owner": "sam"
            },
            "vpc_id": "vpc-0197cd7ae68519180"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:route-table/rtb-0f2c25979dde29623",
            "id": "rtb-0f2c25979dde29623",
            "owner_id": "097197321955",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "myvpc-public",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "myvpc-public",
              "Owner": "sam"
            },
            "vpc_id": "vpc-0197cd7ae68519180"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db792d78024847a5",
            "route_table_id": "rtb-09658a905650a7228",
            "subnet_id": "subnet-04ddbe0402654410d"
          },
          "dependencies": [
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-048df011fb4f996ae",
            "route_table_id": "rtb-09658a905650a7228",
            "subnet_id": "subnet-06e9d717034009602"
          },
          "dependencies": [
            "module.myvpc.aws_route_table.private",
            "module.myvpc.aws_subnet.private",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02134a755979c26aa",
            "route_table_id": "rtb-0f2c25979dde29623",
            "subnet_id": "subnet-0a68aad311373be06"
          },
          "dependencies": [
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b7604e0894065bf",
            "route_table_id": "rtb-0f2c25979dde29623",
            "subnet_id": "subnet-072a63e7d81f9e36d"
          },
          "dependencies": [
            "module.myvpc.aws_route_table.public",
            "module.myvpc.aws_subnet.public",
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:subnet/subnet-04ddbe0402654410d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-04ddbe0402654410d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097197321955",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Owner": "sam"
            },
            "vpc_id": "vpc-0197cd7ae68519180"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:subnet/subnet-06e9d717034009602",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06e9d717034009602",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "097197321955",
            "tags": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "private-subnet",
              "Owner": "sam"
            },
            "vpc_id": "vpc-0197cd7ae68519180"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:subnet/subnet-0a68aad311373be06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0a68aad311373be06",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097197321955",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Owner": "sam"
            },
            "vpc_id": "vpc-0197cd7ae68519180"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:subnet/subnet-072a63e7d81f9e36d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-072a63e7d81f9e36d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "097197321955",
            "tags": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "public-subnet",
              "Owner": "sam"
            },
            "vpc_id": "vpc-0197cd7ae68519180"
          },
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.myvpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.myvpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:vpc/vpc-0197cd7ae68519180",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f3080c4e1e1618ac",
            "default_route_table_id": "rtb-0b2a29b4238b26041",
            "default_security_group_id": "sg-0bac5df5e4133ebc3",
            "dhcp_options_id": "dopt-79dde703",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0197cd7ae68519180",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b2a29b4238b26041",
            "owner_id": "097197321955",
            "tags": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "sam"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vpc-dev",
              "Owner": "sam"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:097197321955:security-group/sg-03cf39118b213c974",
            "description": "SG for bastion host",
            "egress": [],
            "id": "sg-03cf39118b213c974",
            "ingress": [],
            "name": "SG-bastion-host-20211022024701290700000001",
            "name_prefix": "SG-bastion-host-",
            "owner_id": "097197321955",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG-bastion-host",
              "environment": "dev",
              "owners": "sap"
            },
            "tags_all": {
              "Name": "SG-bastion-host",
              "environment": "dev",
              "owners": "sap"
            },
            "timeouts": null,
            "vpc_id": "vpc-0197cd7ae68519180"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2643802634",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03cf39118b213c974",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1659694627",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03cf39118b213c974",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.myvpc.aws_vpc.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}